--- a/article4.html
+++ b/article4.html
@@ -4,12 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>сайт дизайнера</title>
+    <title>Лотта Ниеминен</title>
+    <meta name="keywords" content="Лотта Ниеминен, дизайнер, книги про дизайн, финский стиль">
+    <meta name="description" content="Pentagram дизайнерская фирма. Она была основана в 1972 году Аланом Флетчером, Тео Кросби, Колином Форбсом, Кеннетом Грейнджем и Мервином Курлански на Нидэм-роуд, Ноттинг-Хилл, Лондон. Компания имеет офисы в Лондоне, Нью-Йорке, Сан-Франциско, Берлине и Остине, штат Техас.">
+    <link rel="icon" type="image/ico" sizes="32x32" href="img/favicon.ico">
+    <link rel="icon" type="image/ico" sizes="16x16" href="img/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <meta property="og:title" content="Лотта Ниеминен">
+    <meta property="og:site_name" content="Лотта Ниеминен">
+    <meta property="og:url" content="https://angelica220.github.io/Lotta-Nieminen/article4.html">
+    <meta property="og:description"
+        content="Pentagram дизайнерская фирма. Она была основана в 1972 году Аланом Флетчером, Тео Кросби, Колином Форбсом, Кеннетом Грейнджем и Мервином Курлански на Нидэм-роуд, Ноттинг-Хилл, Лондон. Компания имеет офисы в Лондоне, Нью-Йорке, Сан-Франциско, Берлине и Остине, штат Техас.">
+    <meta property="og:image" content="https://angelica220.github.io/Lotta-Nieminen/img/penta.jpg">
 </head>
 
 <body>
@@ -35,7 +47,7 @@
                 <figure>
                     <img src="img/penta.jpg" width="200px" class="picture">
                     <figcaption>Pentagram</figcaption>
-                    </figure>
+                </figure>
                 <dt><strong>RoAndCo</strong></dt>
                 <dd>
                     нью-йоркская креативная студия, основанная в 2006 году Роанн Адамс, которая помогает брендам строить
@@ -46,7 +58,7 @@
                 <figure>
                     <img src="img/rocandco.jpg" width="200px" class="picture">
                     <figcaption>RoAndCo</figcaption>
-                    </figure>
+                </figure>
                 <dt><strong>30 Under 30</strong></dt>
                 <dd>
                     ежегодный список, который публикует журнал Forbes, представляющий 30 выдающихся молодых людей в
@@ -55,17 +67,22 @@
                 <figure>
                     <img src="img/under.jpg" width="200px" class="picture">
                     <figcaption>30 Under 30</figcaption>
-                    </figure>
+                </figure>
             </dl>
         </section>
     </main>
     <footer>
-        <p><a target="_blank" href="https://portal.midis.info/company/personal/user/21652/">&copy; Васильева Анжелика 2025г</a></p>
+        <p><a target="_blank" href="https://portal.midis.info/company/personal/user/21652/">&copy; Васильева Анжелика
+                2025г</a></p>
         <p><a href="tel:89995554422">8(999)-555-44-22</a></p>
         <p><a href="mailto:mail@mail.ru">mail@mail.ru</a></p>
-        <a target="_blank" href="https://finland.fi/ru/kultura-i-iskusstvo/novyj-interes-k-finskomu-dizajnu-v-mir/"><img class="four" src="img/spicok.png" width="50px"></a>
-        <a target="_blank" href="https://wildfloweret.livejournal.com/85760.html"><img class="four" src="img/fonarik.png" width="50px"></a>
-        <a target="_blank" href="https://wildfloweret.livejournal.com/85760.htmlhttps://finland.fi/ru/kultura-i-iskusstvo/44391/"><img class="four" src="img/skrepka.png" width="50px"></a>
+        <a target="_blank" href="https://finland.fi/ru/kultura-i-iskusstvo/novyj-interes-k-finskomu-dizajnu-v-mir/"><img
+                class="four" src="img/spicok.png" width="50px"></a>
+        <a target="_blank" href="https://wildfloweret.livejournal.com/85760.html"><img class="four"
+                src="img/fonarik.png" width="50px"></a>
+        <a target="_blank"
+            href="https://wildfloweret.livejournal.com/85760.htmlhttps://finland.fi/ru/kultura-i-iskusstvo/44391/"><img
+                class="four" src="img/skrepka.png" width="50px"></a>
     </footer>
 </body>
 
