--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Лотта Ниеминен</title>
     <meta name="keywords" content="Лотта Ниеминен, дизайнер, книги про дизайн, финский стиль">
     <meta name="description" content="Лотта Ниеминен — финский иллюстратор, графический дизайнер и арт-директор, известная своим
-                ярким, красочным и детальным стилем.">
+                ярким, красочным и детальным стилем. Она увлекалась созданием детских книг, а также дизайном цифровых интерфейсов, публикаций,
+                упаковки и мебели. Она разрабатывала контент для таких компаний, как Facebook, Google, Volkswagen,
+                Bulgari, Marimekko и Hermès.">
     <link rel="icon" type="image/ico" sizes="32x32" href="img/favicon.ico">
     <link rel="icon" type="image/ico" sizes="16x16" href="img/favicon.ico">
     <link rel="shortcut icon" href="img/favicon.ico">
@@ -17,6 +19,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <meta property="og:title" content="Лотта Ниеминен">
+    <meta property="og:site_name" content="Лотта Ниеминен">
+    <meta property="og:url" content="https://angelica220.github.io/Lotta-Nieminen/">
+    <meta property="og:description" content="Лотта Ниеминен — финский иллюстратор, графический дизайнер и арт-директор, известная своим
+                ярким, красочным и детальным стилем. Она увлекалась созданием детских книг, а также дизайном цифровых интерфейсов, публикаций,
+                упаковки и мебели. Она разрабатывала контент для таких компаний, как Facebook, Google, Volkswagen,
+                Bulgari, Marimekko и Hermès.">
+    <meta property="og:image" content="https://angelica220.github.io/Lotta-Nieminen/#feedback/img/лотта.jpg">
+
 </head>
 
 <body>
@@ -39,8 +51,7 @@
                 ярким, красочным и детальным стилем.</p>
             <p class="two">Она увлекалась созданием детских книг, а также дизайном цифровых интерфейсов, публикаций,
                 упаковки и мебели. Она разрабатывала контент для таких компаний, как Facebook, Google, Volkswagen,
-                Bulgari,
-                Marimekko и Hermès.</p>
+                Bulgari, Marimekko и Hermès.</p>
             <blockquote>
                 <q class="free">Сила в спокойствии для визуальной идентичности бренда аксессуаров, меняющего
                     представление об ответственной роскоши</q>
